cmake_minimum_required(VERSION 3.9)

project(hw5 CXX) # CHANE THE PROJECT NAME HERE

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

#set (CMAKE_CXX_STANDARD 11) # C++11
set (CMAKE_CXX_STANDARD 17) # C++17

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

set(INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
set(LIB_SRC_DIR ${PROJECT_SOURCE_DIR}/lib)

add_subdirectory(lib)
add_subdirectory(src)
add_subdirectory(test)


